--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,16 @@
         android:text="@string/name"
         android:textAlignment="center" />
 
+    <EditText
+        android:id="@+id/nickname_edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/what_is_your_nickname"
+        android:inputType="textShortMessage|textMultiLine|textPersonName|text|textEmailAddress"
+        android:textAlignment="center"
+        android:autofillHints="" />
+
     <ImageView
         android:id="@+id/star_image"
         android:layout_width="match_parent"
