--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#128C7E</color>
     <color name="colorPrimaryDark">#128C7E</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#76bf5e</color>
 </resources>
